add productCode in products
